--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "react-test-renderer": "^17.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "webpack-dev-server": "^4.1.1"
+  },
+  "jest": {
+    "testPathIgnorePatterns": ["config/"]
   }
 }
