--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@rails/webpacker": "5.4.2",
     "autoprefixer": "9.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "date-fns": "^2.23.0",
     "postcss": "7.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -22,14 +23,17 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@webpack-cli/serve": "^1.5.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "jest": "^27.1.1",
     "react-test-renderer": "^17.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "webpack-dev-server": "^4.1.1"
+    "webpack-dev-server": "~3"
   },
   "jest": {
-    "testPathIgnorePatterns": ["config/"]
+    "testPathIgnorePatterns": [
+      "config/"
+    ]
   }
 }
