--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "@webpack-cli/serve": "^1.5.2",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "jest": "^27.1.1",
@@ -34,6 +35,10 @@
   "jest": {
     "testPathIgnorePatterns": [
       "config/"
-    ]
+    ],
+    "setupFilesAfterEnv": [
+      "./app/javascript/testSetup.js"
+    ],
+    "testURL": "http://localhost:3000"
   }
 }
