--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "autoprefixer": "9.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "date-fns": "^2.23.0",
-    "postcss": "7.0",
+    "postcss": "^7.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react_ujs": "^2.6.1",
+    "@tailwindcss/postcss7-compat": "^2.2.14",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
